<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.hu_berlin.informatik.spws2014.mapever.entzerrung.Entzerren" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="110"
        android:title="@string/action_about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_quick_help"
        android:icon="@drawable/ic_action_help"
        android:orderInCategory="50"
        android:title="@string/action_quick_help"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_show_corners"
        android:icon="@drawable/ic_action_crop"
        android:orderInCategory="1"
        android:title="@string/action_show_corners"
        app:showAsAction="ifRoom"/>

</menu>