<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/spacing1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/location_help"
        android:background="#00000000"
        android:contentDescription="@null" />

    <ImageButton
        android:id="@+id/location_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/set_refpoint_help"
        android:contentDescription="@string/navigation_desc_location"
        android:src="@drawable/current_position" />

    <TextView
        android:id="@+id/location_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spacing1"
        android:layout_toEndOf="@+id/set_refpoint_help"
        android:layout_toRightOf="@+id/set_refpoint_help"
        android:text="@string/navigation_help_location"
        android:textColor="@android:color/white" />

    <ImageButton
        android:id="@+id/set_refpoint_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/navigation_desc_set_refpoint"
        android:src="@drawable/ic_action_reference_point_marker" />

    <TextView
        android:id="@+id/set_refpoint_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/set_refpoint_help"
        android:layout_toRightOf="@+id/set_refpoint_help"
        android:text="@string/navigation_help_set_refpoint"
        android:textColor="@android:color/white" />

    <ImageButton
        android:id="@+id/refpoint_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/set_refpoint_help"
        android:contentDescription="@string/navigation_desc_refpoint"
        android:src="@drawable/ref_punkt" />

    <TextView
        android:id="@+id/refpoint_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/refpoint_help"
        android:layout_toEndOf="@+id/set_refpoint_help"
        android:layout_toRightOf="@+id/set_refpoint_help"
        android:text="@string/navigation_help_refpoint"
        android:textColor="@android:color/white" />

</RelativeLayout>