<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"
        android:contentDescription="@null" />

    <ImageButton
        android:id="@+id/accept_refpoint_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/navigation_desc_accept_refpoint"
        android:src="@drawable/ic_action_done" />

    <ImageButton
        android:id="@+id/cancel_refpoint_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spacing"
        android:contentDescription="@string/navigation_desc_cancel_refpoint"
        android:src="@drawable/ic_action_cancel" />

    <TextView
        android:id="@+id/cancel_refpoint_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spacing"
        android:layout_toEndOf="@+id/cancel_refpoint_help"
        android:layout_toRightOf="@+id/cancel_refpoint_help"
        android:singleLine="false"
        android:text="@string/navigation_help_cancel_refpoint"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/accept_refpoint_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/accept_refpoint_help"
        android:layout_toRightOf="@+id/accept_refpoint_help"
        android:singleLine="false"
        android:text="@string/navigation_help_accept_refpoint"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accept_refpoint_help"
        android:background="#00000000"
        android:contentDescription="@null" />

</RelativeLayout>