<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.hu_berlin.informatik.spws2014.mapever.navigation.Navigation" >

    <de.hu_berlin.informatik.spws2014.mapever.navigation.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="matrix" />

    <ImageButton
        android:id="@+id/set_refpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#151515"
        android:contentDescription="@string/navigation_desc_set_refpoint"
        android:onClick="setRefPoint"
        android:src="@drawable/ic_action_reference_point_marker" />

    <ImageView
        android:id="@+id/spacing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        android:contentDescription="@null" />

    <ImageButton
        android:id="@+id/cancel_refpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/spacing"
        android:layout_toRightOf="@+id/spacing"
        android:backgroundTint="#151515"
        android:contentDescription="@string/navigation_desc_cancel_refpoint"
        android:onClick="cancelReferencePoint"
        android:src="@drawable/ic_action_cancel" />

    <ImageButton
        android:id="@+id/accept_refpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/set_refpoint"
        android:layout_toLeftOf="@+id/cancel_refpoint"
        android:layout_toStartOf="@+id/spacing"
        android:backgroundTint="#151515"
        android:contentDescription="@string/navigation_desc_accept_refpoint"
        android:onClick="acceptReferencePoint"
        android:src="@drawable/ic_action_done" />

    <ImageButton
        android:id="@+id/delete_refpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/set_refpoint"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#151515"
        android:contentDescription="@string/navigation_desc_delete_refpoint"
        android:onClick="deleteReferencePoint"
        android:src="@drawable/ic_action_delete" />

    <ImageButton
        android:id="@+id/track_position"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#151515"
        android:contentDescription="@string/navigation_desc_track_position"
        android:onClick="trackPosition"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_action_location_found"
        android:visibility="gone" />

</RelativeLayout>